targets/sol/k3s/gokapi/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gokapi-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`send.$SERVICES_DOMAIN`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: base
        - name: forwardauth-authelia
          namespace: base
      services:
        - name: gokapi
          port: 53842
  tls:
    secretName: gokapi-prod-tls
